# C_Study

./: .gitignore  CMakeLists.txt  README.md  area.cpp  debug.cpp  main.cpp  max.h
doc/: 01debug.md  02print格式控制字符.md  02三次数学危机到图灵机.md  03图灵机.md  04计算机为何能够计算.md  05程序是如何进行计算的.md  06存储器.md  07快步走进c程序.md  08从现实问题到计算机程序
doc/00课程介绍/: 00课程介绍.md
doc/01计算机基本原理/: 01笔记
doc/01课程介绍/: 00课程介绍.md
doc/02计算机基本原理/: 02三次数学危机到图灵机.md
doc/03计算机的历史与未来/: 02从电子管到云计算.md  03未来计算机
doc/05感性认识计算机程序/: 02感性认知程序.md
doc/06从现实问题到c程序/: 01从现实问题到c程序.md
doc/07c语言中的数据部分/: 03字符型  04布尔类型  05常量
doc/07理性认识c程序/: 01笔记.md
doc/08c语言中的数据部分/: 01数据类型  02浮点类型
doc/08c语言控制成分/: 01分支语句
doc/09c语言中的运算成分/: 01  02
doc/10c语言控制成分/: 01分支语句
doc/11字符串/: 01字符数组
doc/PartA/: 01课程介绍.md  03计算机的历史与未来.md  05感性认识计算机程序.md  07理性认识c程序.md  09C语言中的运算成分.md  10控制语句.md  11二维数组.md  11数组.md  12字符数组.md
doc/PartB/: 01函数.md  02函数.md  02递归.md  03指针.md
homework/01basicExercises/: IsLeapYear.cpp  Istriangle.cpp  JingjingGoesOnADate.cpp  PointsAndSquares.cpp  chickenRabbit.cpp  nothingWithSeven.cpp  oneCount.cpp  reverseArray.cpp  sumOddNumber.cpp  triangleArea.cpp
homework/01感性认识计算机程序/: leapYear.cpp  与7无关的数.cpp  奇数求和.cpp  贝贝找晶晶.cpp  鸡兔同笼.cpp
homework/02data/: bacteriaWar.cpp  examK.cpp  intCount.cpp  medalCount.cpp  threeFiveSeven.cpp
homework/02从现实问题到计算基础程序/: 1的个数.cpp  三角形判断.cpp  数组逆序重放.cpp  点和正方形的关系.cpp  计算三角形面积.cpp
homework/03c语言中的数据成分/: 奥运奖牌计数.cpp  数据类型.c  整数的个数.cpp  细菌的战争.cpp  能被3，5，7整除的数.cpp  谁考了第k名.cpp
homework/03operation/: PayByRMB.cpp  ageAndSickness.cpp  fractionalSum.cpp  second.cpp  specialNumber.cpp  第二个重复出现的数.cpp
homework/04control/: food.cpp  longest.cpp  perfectCube.cpp  weight.cpp
homework/05array/: deleteArray.cpp  distanceSort.cpp  errorCheck.cpp  matrix.cpp  saddlePoint.cpp  sequence.cpp
schoolwork/数据类型/: 温度转换.cpp  逆序打印.cpp
schoolwork/第一周/: 输出学号.cpp
schoolwork/第五章/: 天数判断.cpp  星期推算.cpp  特征数判断.cpp
schoolwork/第六章/: test.cpp  图形打印.cpp  求和S.cpp  特征四位数.cpp  追查车号.cpp
schoolwork/第四章/: test.cpp  时刻转换.cpp  进制转换.cpp
seatwork/06/: chickenRabbit .cpp  hundred.cpp
seatwork/Recursion/: convert.cpp  cute.cpp  example.cpp  fact.cpp  fibo.cpp  hannuota.cpp
seatwork/string/: concat.cpp  encoder.cpp  wordCount.cpp
(+11 files in other folders)
