cmake_minimum_required(VERSION 3.13)
project(C_Study)

set(CMAKE_CXX_STANDARD 14)

add_executable(C_Study main.cpp area.cpp debug.cpp homework/01感性认识计算机程序/贝贝找晶晶.cpp homework/01感性认识计算机程序/leapYear.cpp homework/01感性认识计算机程序/鸡兔同笼.cpp homework/01感性认识计算机程序/奇数求和.cpp homework/01感性认识计算机程序/与7无关的数.cpp homework/02从现实问题到计算基础程序/计算三角形面积.cpp homework/02从现实问题到计算基础程序/数组逆序重放.cpp homework/02从现实问题到计算基础程序/点和正方形的关系.cpp homework/02从现实问题到计算基础程序/三角形判断.cpp homework/02从现实问题到计算基础程序/1的个数.cpp homework/03c语言中的数据成分/数据类型.c schoolwork/第一周/输出学号.cpp homework/03c语言中的数据成分/整数的个数.cpp homework/03c语言中的数据成分/奥运奖牌计数.cpp homework/03c语言中的数据成分/能被3，5，7整除的数.cpp homework/03c语言中的数据成分/细菌的战争.cpp schoolwork/数据类型/逆序打印.cpp schoolwork/数据类型/温度转换.cpp schoolwork/第四章/test.cpp schoolwork/第四章/时刻转换.cpp schoolwork/第四章/进制转换.cpp schoolwork/第五章/星期推算.cpp schoolwork/第五章/特征数判断.cpp schoolwork/第五章/天数判断.cpp schoolwork/第六章/test.cpp schoolwork/第六章/图形打印.cpp schoolwork/第六章/特征四位数.cpp schoolwork/第六章/求和S.cpp schoolwork/第六章/追查车号.cpp)