cmake_minimum_required(VERSION 3.13)
project(C_Study)

set(CMAKE_CXX_STANDARD 14)

add_executable(C_Study main.cpp homework/01basicExercises/JingjingGoesOnADate.cpp homework/01basicExercises/IsLeapYear.cpp homework/01basicExercises/chickenRabbit.cpp homework/01basicExercises/sumOddNumber.cpp homework/01basicExercises/nothingWithSeven.cpp)