cmake_minimum_required(VERSION 3.13)
project(C_Study)

set(CMAKE_CXX_STANDARD 14)

add_executable(C_Study main.cpp homework/01basicExercises/JingjingGoesOnADate.cpp homework/01basicExercises/IsLeapYear.cpp homework/01basicExercises/chickenRabbit.cpp homework/01basicExercises/sumOddNumber.cpp homework/01basicExercises/nothingWithSeven.cpp homework/01basicExercises/triangleArea.cpp homework/01basicExercises/reverseArray.cpp homework/01basicExercises/PointsAndSquares.cpp homework/01basicExercises/Istriangle.cpp homework/01basicExercises/oneCount.cpp homework/02data/intCount.cpp homework/02data/medalCount.cpp homework/02data/threeFiveSeven.cpp homework/02data/bacteriaWar.cpp homework/02data/examK.cpp homework/03operation/second.cpp homework/03operation/ageAndSickness.cpp)